[#1] ✏️bug : turn state가 바뀔때마다 모든 span (stone으로 쓰는) 이 rerender --> bg 오작동.

--- a/soy-omok/src/App.css
+++ b/soy-omok/src/App.css
@@ -45,3 +45,10 @@
   background-position: center;
   display: inline-flex;
 }
+.col__stone {
+  width: 2rem;
+  height: 2rem;
+  border-radius: 100%;
+  display: block;
+  margin: auto;
+}
