--- a/soy-omok2/src/App.css
+++ b/soy-omok2/src/App.css
@@ -56,6 +56,25 @@
   margin: auto;
   background-size: cover;
 }
+.Omok__input__Wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+input {
+  font-size: 15px;
+  color: rgba(0, 0, 0, 0.6);
+  height: 38px;
+  width: 70%;
+  border-radius: 2px;
+  border-width: 1px;
+  border-style: solid;
+  border-color: rgb(200, 200, 200);
+  border-image: initial;
+  padding: 3px 17px 0px;
+  outline: 0px;
+  transition: background-color 0.25s ease 0s;
+}
+
 table {
   border-collapse: collapse;
   text-align: left;
